<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_color">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp" >

        <EditText
            android:id="@+id/editText_horario_dialog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="2dp" 
            android:ems="20"
            android:hint="@string/nombre_camion" />

        <TextView
            android:id="@+id/label_foto_portada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_portada"
            android:paddingTop="2dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imagen_foto_portada"
        	android:layout_width="310dp"
        	android:layout_height="310dp"
        	android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/label_otra_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/otra_foto"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imagen_otra_foto"
        	android:layout_width="310dp"
        	android:layout_height="310dp"
        	android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/label_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/logo_camion"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imagen_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" />
        
        <Spinner
        	android:id="@+id/spinner_tipo"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:entries="@array/tipo_array"
        	android:hint="@string/tipo_camion"/>

        <Button
            android:id="@+id/button_create_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_color"
            android:text="@string/crear_camion"
            android:textColor="@android:color/white"/>

    </LinearLayout>
    
    </ScrollView>